# UncannyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  HISTORY.md  LICENSE.md  LICENSE.txt  README.md
Engine/: CMakeLists.txt
Engine/filesystem/: FileManager.cpp  FileManager.h
Engine/math/: mat4.cpp  mat4.h  mat4.inl  trigonometry.h  vec3.cpp  vec3.h  vec3.inl  vec4.cpp  vec4.h  vec4.inl
Engine/platform/: Platform.h  PlatformWindows.cpp
Engine/renderer/: Camera.cpp  Camera.h  Context.cpp  Context.h  Factory.h  Mesh.h  RenderContext.cpp  RenderContext.h  RenderContextFactory.h  Renderer.cpp  Renderer.h
Engine/renderer/vulkan/: RenderContextDependencies.cpp  RenderContextDependencies.h  RenderContextStructures.h  RenderContextVulkan.cpp  RenderContextVulkan.h  VolkInclude.cpp  VulkanBuffers.cpp  VulkanCommandBuffer.cpp  VulkanCommandPool.cpp  VulkanDebugUtils.cpp  VulkanDebugUtils.h  VulkanFence.cpp  VulkanGraphicsPipelines.cpp  VulkanGraphicsPipelines.h  VulkanImageDepth.cpp  VulkanImageDepth.h  VulkanImages.cpp  VulkanImages.h  VulkanImagesRender.cpp  VulkanInstance.cpp  VulkanLogicalDevice.cpp  VulkanMesh.cpp  VulkanMesh.h  VulkanPhysicalDevice.cpp  VulkanQueues.cpp  VulkanRecordCommandBuffers.cpp  VulkanRecordCommandBuffers.h  VulkanRenderImages.cpp  VulkanRenderPass.cpp  VulkanSemaphore.cpp  VulkanSwapchain.cpp  VulkanUtilities.cpp  VulkanUtilities.h  VulkanWindowSurface.cpp  VulkanWindowSurface.h
Engine/renderer/vulkan_context/: ContextVulkan.cpp  ContextVulkan.h  ContextVulkanDependencies.cpp  VulkanDebugUtils.cpp  VulkanInstance.cpp  VulkanLogicalDevice.cpp  VulkanPhysicalDevice.cpp  VulkanQueues.cpp  VulkanWindowSurface.cpp
Engine/renderer/vulkan_renderer/: RendererDependenciesVulkan.h  RendererStructuresVulkan.h  RendererVulkan.cpp  RendererVulkan.h  VulkanBuffers.cpp  VulkanBuffers.h  VulkanBuffersUniform.cpp  VulkanBuffersVertexIndex.cpp  VulkanCommandBuffer.cpp  VulkanCommandPool.cpp  VulkanDescriptors.cpp  VulkanFence.cpp  VulkanGraphicsPipelines.cpp  VulkanImageDepth.cpp  VulkanImages.cpp  VulkanImages.h  VulkanImagesRender.cpp  VulkanRecordCommandBuffers.cpp  VulkanRecordCommandBuffers.h  VulkanRenderPass.cpp  VulkanSemaphore.cpp  VulkanSwapchain.cpp  VulkanSwapchain.h
Engine/utilities/: Includes.h  Libraries.h  Logger.cpp  Logger.h  Variables.h  Versions.cpp  Versions.h
Engine/window/: Window.cpp  Window.h  WindowFactory.h
Engine/window/glfw/: WindowGLFW.cpp  WindowGLFW.h
Sandbox/: CMakeLists.txt  main.cpp
UGraphicsEngine/: CMakeLists.txt  README.md
UGraphicsEngine/RHI/: RHI.h  RenderHardwareInterfaceVulkan.cpp  RenderHardwareInterfaceVulkan.h
UGraphicsEngine/RHI/Vulkan/: EXTDebugUtils.cpp  EXTDebugUtils.h  Instance.cpp  Instance.h  InstanceAttributes.h  InstanceProperties.cpp  InstanceProperties.h  LogicalDevice.cpp  LogicalDevice.h  LogicalDeviceAttributes.cpp  LogicalDeviceAttributes.h  PhysicalDevice.cpp  PhysicalDevice.h  PhysicalDeviceAttributes.cpp  PhysicalDeviceAttributes.h  PhysicalDeviceSelector.cpp  PhysicalDeviceSelector.h  QueueFamilySelector.cpp  QueueFamilySelector.h  Utilities.cpp  Utilities.h  VolkHandler.cpp  VolkHandler.h
UGraphicsEngine/Renderer/: Camera.cpp  Camera.h  Light.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveRayTracingCamera.cpp  PerspectiveRayTracingCamera.h  RenderContextVulkan.cpp  RenderContextVulkan.h  RenderHardwareInterfaceVulkan.cpp  RenderHardwareInterfaceVulkan.h  RenderMesh.cpp  RenderMesh.h  RendererVulkan.cpp  RendererVulkan.h
UGraphicsEngine/Renderer/Vulkan/: RenderCommands.cpp  RenderCommands.h  RenderContext.cpp  RenderContext.h  RenderContextVulkan.cpp  RenderContextVulkan.h  RenderDevice.cpp  RenderDevice.h  RenderDeviceFactory.cpp  RenderDeviceFactory.h  RenderDeviceVulkan.cpp  RenderDeviceVulkan.h  RenderHardwareInterfaceVulkan.cpp  RenderHardwareInterfaceVulkan.h  Utilities.cpp  Utilities.h
UGraphicsEngine/source/Vulkan/: Instance.cpp  Instance.h
UMath/: CMakeLists.txt  Impl.cpp  Matrix4x4.h  Trig.h  Types.h  Vector2.h  Vector3.h  Vector4.h
USamples/: CMakeLists.txt
USamples/00_FunZone/: CMakeLists.txt  main.cpp
USamples/00_Sandbox/: App.cpp  App.h  CMakeLists.txt  main.cpp
USamples/00_Sandbox2/: CMakeLists.txt  main.cpp
USamples/01_ClearColorImage_via_vkCmdClearColorImage/: CMakeLists.txt  README.md  main.cpp
USamples/02_CopyRenderTargetImageIntoSwapchainImage/: CMakeLists.txt  README.md  main.cpp
USamples/03_RayTracingTriangle/: CMakeLists.txt  README.md  main.cpp
USamples/04_RayTracingTriangleWithCamera/: CMakeLists.txt  README.md  main.cpp
USamples/05_RayTracingLoadedSingleObjMesh/: CMakeLists.txt  README.md  main.cpp
USamples/05_RayTracingLoadingSingleObjMesh/: CMakeLists.txt  main.cpp
USamples/06_RayTracingInSeveralBLASes/: CMakeLists.txt  README.md  main.cpp
USamples/07_DrawingNormalsUsingRayTracing/: CMakeLists.txt  README.md  main.cpp
USamples/08_DrawingColorsWithRayTracing/: CMakeLists.txt  README.md  main.cpp
USamples/09_RayTracedShadow/: CMakeLists.txt  README.md  main.cpp
USamples/10_AntialiasingWithLambertianMaterial/: CMakeLists.txt  README.md  main.cpp
USamples/11_ReflectionsAlongWithSceneLoadingFromJson/: CMakeLists.txt  README.md  main.cpp
USamples/12_ImGuiWithRayTracing/: CMakeLists.txt  README.md  main.cpp
USamples/13_KajiyaStylePathTracing/: App.cpp  App.h  CMakeLists.txt  main.cpp
USceneSamples/: 4_Fireplace.json  (+10 more)
UTools/: CMakeLists.txt  RandomGenerator.cpp  RandomGenerator.h  UTypes.h
UTools/Assets/: AssetLoader.cpp  AssetLoader.h  AssetRegistry.cpp  AssetRegistry.h  IdentifierRegistry.cpp  IdentifierRegistry.h  MeshAsset.cpp  MeshAsset.h
UTools/EntityComponentSystem/: Components.h  Entity.cpp  Entity.h  EntityRegistry.cpp  EntityRegistry.h  EntityRegistryLoader.cpp  EntityRegistryLoader.h
UTools/Filesystem/: File.cpp  File.h  Path.cpp  Path.h
UTools/Logger/: Log.cpp  Log.h  LogImpl.cpp  LogImpl.h
UTools/Window/: IWindow.h  WindowGLFW.cpp  WindowGLFW.h
tests/: CMakeLists.txt  first_test.cpp
tests/UMath/: Tests_Vector3.cpp  Tests_Vector4.cpp
tests/math/: mat4_tests.cpp  vec3_tests.cpp  vec4_tests.cpp
(+320 files in other folders)
